estructura de vista prestamobien

--- a/app/src/app/prestamobien/prestamobien.component.scss
+++ b/app/src/app/prestamobien/prestamobien.component.scss
@@ -1,52 +1,251 @@
-.container {
-    text-align: center;
-    padding: 20px;
-    background-color: white;
-    border-radius: 8px;
-  
-    width: 80%;
-    max-width: 500px;
-    margin: 40px auto;
+
+
+.h100{
+  height: 100%;
+}
+
+.v100{
+  width: 100%;
+}
+
+.view100{
+  width: 100vw!important;
+}
+
+.btn-back{
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  background-color: #f5f5f5;
+  color: #000;
+  border: 1px solid #000;
+  border-radius: 5px;
+  padding: 5px 10px;
+  font-size: 14px;
+  max-height: 50px;
+  cursor: pointer;
+  transition: 0.3s;
+  &:hover{
+      background-color: #000;
+      color: #fff;
   }
-  .hr {
-    border: 3px solid #d5a20e;
-    margin: 15px auto;
+}
+
+.color{
+  color: rgb(181, 165, 125);
+}
+
+.negro{
+  color: #000;
+}
+
+.espaciado{
+  margin: 50px!important;
+}
+
+.eb{
+  margin-bottom: 20px!important;
+}
+
+.et{
+  margin-top: 20px!important;
+}
+
+.er{
+  margin-left: 10px!important;
+}
+
+.content {
+  border: 4px solid #000!important;
+  border-radius: 6px!important;
+}
+
+.w100{
+  min-width: 100%!important;
+}
+
+.w80{
+  max-width: 80%;
+}
+
+.fondo-color{
+  background-color: #99824B;
+}
+
+.color-b{
+  color:#99824B!important;
+  height: 2px;
+
+}
+
+.btn2 {
+  background: linear-gradient(90deg, #FFD97D, #99824B); /* Degradado ajustado */
+  color: black; /* Texto en blanco */
+  padding: 10px 20px; /* Espaciado interno*/
+  border-radius: 20px; /* Bordes redondeados */
+  font-size: 1.0rem; /* Tamaño del texto */
+  font-weight: bold; /* Texto en negrita */
+  transition: background 0.3s ease; /* Transición suave al pasar el mouse */
+  margin-top: 15px!important;
+}
+
+.btn2:hover {
+  background: linear-gradient(90deg, #99824B, #FFD97D); /* Invertir el degradado en hover */
+}
+
+
+.flechita{
+  cursor: pointer;
+  transition: transform 0.3s ease;
+
+  &:hover {
+      transform: scale(1.1);
   }
-  .icon {
-    font-size: 80px;
-    color: #FFD700;
-    margin-bottom: 20px;
+}
+
+.download {
+  cursor: pointer;
+  text-decoration: underline;
+  color: blue;
+
+  &:hover {
+      color: black; /* Example hover effect */
   }
+}
+
+.w80p{
+  width: 80%!important;
+}
+
+.custom-button-b{
+  background: linear-gradient(90deg, #111217 0%, #5C627D 100%);
   
-  .message {
-    font-size: 18px;
-    margin: 10px ;
+}
+
+
+/*Gino*/
+
+.detalle{
+  min-height: 100vh;
+  margin: auto;
+  background: linear-gradient(180deg,#00203D  0%,#0056A3  80%);
+}
+
+.detailCron{
+  width: 100%;
+  background: linear-gradient(270deg, #6CC1EB 0%, #3D6D85 100%);
+}
+
+.butons:hover{
+  background-color: orange;
+  color: white;
+}
+
+.cerrarbtn{
+  margin-top: 450px;
+}
+
+.cerrarbtn:hover{
+  background-color: orange;
+  color: white;
+}
+
+.card{
+  background: linear-gradient(270deg, #6CC1EB 0%, #3D6D85 100%);
+}
+
+.nav{
+  min-height: 90vh;
+}
+
+/*btn*/
+.btn-mes {
+  background-image: linear-gradient(90deg, #F28907 0%, #8C4F04 100%);
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 25px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+
+  width: 200px;
+}
+
+.btn-continuar {
+  background-image: linear-gradient(90deg, #6CC1EB 0%, #3D6D85 100%);
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 25px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+  width: 300px;
+}
+/*Formulario soles*/
+.form-soles {
+  height: 60px;
+  color: white;
+  background-color: transparent;
+  &::placeholder {
+      color: white; /* Color blanco para el placeholder */
   }
+}
+
+/*flecha*/
+.ico i{
+  height: 15px;
+}
+
+/*Barra*/
+
+.barra{
+  width: 80%;
+}
+
+.progress-bar-container {
+  background-color: #fff; /* Fondo blanco */
+  border: 1px solid #000; /* Borde opcional */
+  border-radius: 5px; /* Bordes redondeados */
+  width: 100%; /* Ancho completo del contenedor */
+  height: 20px; /* Altura de la barra */
+  overflow: hidden; /* Ocultar el desbordamiento */
+  position: relative; /* Posicionamiento relativo para el contenido interno */
+}
+
+.progress-bar {
+  background-color: #F28907; /* Color de la barra de carga */
+  width: 100%; /* Cargada hasta el 50% */
+  height: 100%; /* Altura completa del contenedor */
+  transition: width 0.3s ease; /* Transición suave al cambiar el ancho */
+}
+
+.footer{
+  color: white!important;
+}
+
+/**/
+.m-continuar{
+  margin-top: 200px;
+  margin-bottom: 100px;
+}
+
+.v100vh{
+  min-height: 100vh!important;
+}
+
+.ico i:hover{
+  cursor: pointer;
   
-  .bold {
-    font-weight: bold;
-  }
+}
+
+.ico p:hover{
+  cursor: pointer;
   
-  .button {
-    background: linear-gradient(145deg, #ffc321, #b18711);
-    border: none;
-    color: black;
-    padding: 20px;
-    border-radius: 20px;
-    font-size: 1.2rem;
-    transition: all 0.4s ease;
-  
-    background-position: right bottom;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    cursor: pointer;
-    text-decoration: none;
-  margin: 25px auto;
-  }
-  
-  .button:hover {
-    background: linear-gradient(145deg, #ffca42, #dfa71f);
-    background-position: left bottom;
-    transform: translateY(-2px);
-  
-  }
+}
+
+#l1{
+  height: 1px;
+  background: #F28907;
+}
