feat:Corrigiendo mergeconflict

--- a/app/src/app/ingresar-detalles-de-prestamos-v2/ingresar-detalles-de-prestamos-v2.component.html
+++ b/app/src/app/ingresar-detalles-de-prestamos-v2/ingresar-detalles-de-prestamos-v2.component.html
@@ -56,6 +56,15 @@
           </div>
         </div>
       </form>
+
     </div>
+
+    <div class="row mt-1">
+      <div class="line">
+        <hr class="border border-1 opacity-100">
+      </div>
+      <p class="text-end text-warning fst-italic fw-semibold footer">Copyright © 2024, All rights reserved.</p>
+    </div> 
+    
   </div>
   
