--- a/app/src/app/prestamobien/prestamobien.component.html
+++ b/app/src/app/prestamobien/prestamobien.component.html
@@ -29,7 +29,7 @@
           
           <div class="row d-flex justify-content-center">
             <button class="btn btn-continuar" 
-                    type="submit" >Volver al inicio
+                    type="submit" (click)="volver()">Volver al inicio
             </button>
           </div>
             
