--- a/app/src/app/prestamobien/prestamobien.component.html
+++ b/app/src/app/prestamobien/prestamobien.component.html
@@ -1,22 +1,25 @@
 
 <div class="detalle container-fluid fw-semibold fst-italic text-light row">
+
   <div class="v100vh">
     <div class="90 justify-content-center d-flex flex-column">
-
-      <div class="row">
-        <h2>Ingrese los detalles del préstamo</h2>
-      </div>
-      <div class="barra">
-        <div class="progress-bar-container">
-          <div class="progress-bar"></div>
+      <div class="col-6 mx-auto mt-5">
+        <div class="row mb-5">
+          <h2>Ingrese los detalles del préstamo</h2>
         </div>
+        <div class="barra">
+          <div class="progress-bar-container mb-5">
+            <div class="progress-bar"></div>
+          </div>
+        </div>
+
       </div>
 
       <div class="row d-flex justify-content-center flex-column align-content-center">
         <div class="col-md-6 text-center">
           <p>Prestamo exitoso</p>
-          <div class="row">
-
+          <div class="row mt-5 mb-5 fs-1">
+            <i class="fa-regular fa-circle-check fa-2xl" style="color: #FFD43B;"></i>
           </div>
           <div class="row">
             <p>Monto a desembolar</p>
