--- a/app/src/app/validar-informacion/validar-informacion.component.html
+++ b/app/src/app/validar-informacion/validar-informacion.component.html
@@ -97,7 +97,12 @@
     <!-- Alerta de error personalizada -->
     <div class="custom-alert" *ngIf="showError">
         Error: Hubo un problema al iniciar sesión.
-      </div>
+    </div>
 </div>
-
+  <div class="row mt-1">
+      <div class="line">
+        <hr class="border border-1 opacity-100">
+      </div>
+      <p class="text-end text-light fst-italic fw-semibold footer">Copyright © 2024, All rights reserved.</p>
+    </div>
 </div>
