--- a/app/src/app/cronograma-de-pagos/cronograma-de-pagos.component.html
+++ b/app/src/app/cronograma-de-pagos/cronograma-de-pagos.component.html
@@ -1,140 +1,179 @@
-<div class="row nopading">
-    <div class="d-flex justify-content-center align-items-center nopading ">
-        <div class="col-12 d-flex justify-content-center align-items-center nopading">
-            <button type="button" class="flechita" data-bs-toggle="modal" data-bs-target="#exampleModal" style="background: none; border: none; padding: 0;">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
-                  <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" font-size="80" font-family="Arial" fill="black">&lt;</text>
-                </svg>
-              </button>
-            <h2 class="h100" >Cronograma de pagos</h2>
+<div class="crono text-light container-fluid row">
+    <div class="col-6 mx-auto">
+        <h2 class="h100 fw-semibold fst-italic" >Cronograma de pagos</h2>
+        <div class="progress m-3 " role="progressbar" aria-label="with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+          <div class="progress-bar" style="width: 75%"></div>
         </div>
     </div>
-</div>
-
-<div class="d-flex justify-content-center align-items-center flex-column view100 nopading">
-    <div class="d-flex justify-content-center align-items-center flex-column col-10 nopading">
-
-        <div class="container content w100 nopading">
-            <div class="row nopading">
-                <p class="er et">Detalle:</p>
+    <div class="row nopading">
+        
+        <div class="d-flex justify-content-center align-items-center nopading ">
+            <div class="col-12 d-flex justify-content-center align-items-center nopading ">
+                <button type="button" class="flechita" data-bs-toggle="modal" data-bs-target="#exampleModal" style="background: none; border: none; padding: 0;">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
+                      <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" font-size="80" font-family="Arial" fill="black">&lt;</text>
+                    </svg>
+                  </button>
+                  <h3 class=" fw-semibold fst-italic" >Atras</h3>
             </div>
-            <div class="row nopading">
-                <div class="col-6 nopading">
-                    <p class="er et" >Moneda: Soles</p>
+        </div>
+    </div>
+    
+    <div class="d-flex justify-content-center align-items-center flex-column view100 nopading">
+        <div class="d-flex justify-content-center align-items-center flex-column col-10 nopading">
+    
+            <div class="container content w100 nopading">
+                <div class="row nopading">
+                    <p class="er et">Detalle:</p>
                 </div>
-                <div class="col-6 nopading">
-                    <p class="color et">Monto de préstamo: s/<span>{{ ultimoDetallePrestamo?.prestamo?.monto }}</span></p>
+                <div class="row nopading">
+                    <div class="col-6 nopading">
+                        <p class="er et" >Moneda: Soles</p>
+                    </div>
+                    <div class="col-6 nopading">
+                        <p class="color et">Monto de préstamo: s/<span>{{ ultimoDetallePrestamo?.prestamo?.monto }}</span></p>
+                    </div>
                 </div>
+                <div class="row nopading">
+                    <div class="col-4 nopading">
+                        <p class="er et">Plazo (N° de cuotas): <span>{{ ultimoDetallePrestamo?.cronograma?.length }}</span></p>
+                    </div>
+                    <div class="col-4 nopading">
+                        <p class="color et">Total intereses: S/<span class="negro">{{ ultimoDetallePrestamo?.interesTotal}}</span></p>
+                    </div>
+                    <div class="col-4 nopading">
+                        <p class="color et">Monto total a pagar: S/<span class="negro">{{ ultimoDetallePrestamo?.pagarTotal}}</span></p>
+                    </div>
+                </div>
+        
+                <div class="row eb nopading">
+                    <div class="col-12 nopading">
+                        <p class="er et">Día de pago: <span class=""></span></p>
+                    </div>
+                </div>
+    
+                <div class="row vw80 titulo text-center et nopading">
+                    <div class="col-2 text-center nopading">
+                        <p>NmrCuota</p>
+                    </div>
+                    <div class="col-2 nopading">
+                        <p>Fecha de pago</p>
+                    </div>
+                    <div class="col-2 nopading">
+                        <p>Cuota</p>
+                    </div>
+                    <div class="col-2 nopading">
+                        <p>Interes</p>
+                    </div>
+                    <div class="col-2 nopading">
+                        <p>Capital Amortizado</p>
+                    </div>
+                    <div class="col-2 nopading">
+                        <p>Saldo final</p>
+                    </div>
+                </div>
+    
+                <div class="row v100 d-flex justify-content-center nopading">
+                    <div class="row w80 fondo-color nopading">
+                        <div class="color-b"></div>
+                    </div>
+                </div>
+                
+                <div class="row vw80 cuota text-center eb nopading">
+                    <div *ngFor="let cronograma of ultimoDetallePrestamo?.cronograma" class="row nopading">
+                        <div class="col-2">
+                          <p class="n-cuota">{{ cronograma.nmrcuota }}</p>
+                        </div>
+                        <div class="col-2">
+                          <p class="fecha-cuota">{{ cronograma.fechaPago }}</p>
+                        </div>
+                        <div class="col-2">
+                          <p>S/<span class="monto-cuota">{{ cronograma.cuota }}</span></p>
+                        </div>
+                        <div class="col-2">
+                            <p>S/<span class="monto-cuota">{{ cronograma.interes }}</span></p>
+                          </div>
+                        <div class="col-2">
+                            <p>S/<span class="monto-cuota">{{ cronograma.capitalamortizado }}</span></p>
+                          </div>
+                          <div class="col-2">
+                            <p>S/<span class="monto-cuota">{{ cronograma.saldofinal }}</span></p>
+                          </div>
+                      </div>
+                </div>
+    
+    
             </div>
-            <div class="row nopading">
-                <div class="col-4 nopading">
-                    <p class="er et">Plazo (N° de cuotas): <span>{{ ultimoDetallePrestamo?.cronograma?.length }}</span></p>
+    
+            <div class="row v100 nopading">
+                <div class="row nopading">
+                    <p class="text-end nopading">Para ver su cronograma en formato PDF, descargue:</p>
                 </div>
-                <div class="col-4 nopading">
-                    <p class="color et">Total intereses: S/<span class="negro">{{ ultimoDetallePrestamo?.interesTotal}}</span></p>
-                </div>
-                <div class="col-4 nopading">
-                    <p class="color et">Monto total a pagar: S/<span class="negro">{{ ultimoDetallePrestamo?.pagarTotal}}</span></p>
+                <div class="row download">
+                    <button class="btn eb nopading" (click)="downloadPdf();">Descargar PDF</button>
                 </div>
             </div>
     
-            <div class="row eb nopading">
-                <div class="col-12 nopading">
-                    <p class="er et">Día de pago: <span class=""></span></p>
+            <div class="row v100 text-center">
+                <div class="col-md-6 w80 d-grid gap-2">
+                        <button class="btn eb nopading" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal1">Cancelar</button>
                 </div>
-            </div>
 
-            <div class="row vw80 titulo text-center et nopading">
-                <div class="col-2 text-center nopading">
-                    <p>NmrCuota</p>
-                </div>
-                <div class="col-2 nopading">
-                    <p>Fecha de pago</p>
-                </div>
-                <div class="col-2 nopading">
-                    <p>Cuota</p>
-                </div>
-                <div class="col-2 nopading">
-                    <p>Interes</p>
-                </div>
-                <div class="col-2 nopading">
-                    <p>Capital Amortizado</p>
-                </div>
-                <div class="col-2 nopading">
-                    <p>Saldo final</p>
-                </div>
-            </div>
-
-            <div class="row v100 d-flex justify-content-center nopading">
-                <div class="row w80 fondo-color nopading">
-                    <div class="color-b"></div>
+                <div class="col-md-6 w80 d-grid gap-2">
+                    <button class="btn eb nopading" (click)="continue()">Confirmar</button>
                 </div>
             </div>
             
-
-            <div class="row vw80 cuota text-center eb nopading">
-                <div *ngFor="let cronograma of ultimoDetallePrestamo?.cronograma" class="row nopading">
-                    <div class="col-2">
-                      <p class="n-cuota">{{ cronograma.nmrcuota }}</p>
-                    </div>
-                    <div class="col-2">
-                      <p class="fecha-cuota">{{ cronograma.fechaPago }}</p>
-                    </div>
-                    <div class="col-2">
-                      <p>S/<span class="monto-cuota">{{ cronograma.cuota }}</span></p>
-                    </div>
-                    <div class="col-2">
-                        <p>S/<span class="monto-cuota">{{ cronograma.interes }}</span></p>
-                      </div>
-                    <div class="col-2">
-                        <p>S/<span class="monto-cuota">{{ cronograma.capitalamortizado }}</span></p>
-                      </div>
-                      <div class="col-2">
-                        <p>S/<span class="monto-cuota">{{ cronograma.saldofinal }}</span></p>
-                      </div>
-                  </div>
-            </div>
-
-
-        </div>
-
-        <div class="row v100 nopading">
-            <div class="row nopading">
-                <p class="text-end nopading">Para ver su cronograma en formato PDF, descargue:</p>
-            </div>
-            <div class="row download">
-                <button class="btn eb nopading" (click)="downloadPdf();">Descargar PDF</button>
-            </div>
-        </div>
-
-        <div class="row v100 d-flex justify-content-center nopading">
-            <div class="row w80 nopading">
-                
-                    <button class="btn eb nopading" (click)="continue()">Confirmar</button>
-
-            </div>
         </div>
         
     </div>
-</div>
-
-  <!-- Modal -->
-  <div class="modal fade modalstyle" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Confirmacion</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <p>Al volver se eliminar el prestamo, ¿Estas seguro que quieres volver?</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-danger" (click)="volver()" data-bs-dismiss="modal">Volver </button>
+    
+      <!-- Modal -->
+      <div class="modal fade modalstyle text-dark" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Confirmacion</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <p>Al volver se eliminar el prestamo, ¿Estas seguro que quieres volver?</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn" data-bs-dismiss="modal">Cancelar</button>
+              <button type="button" class="btn" (click)="volver()" data-bs-dismiss="modal">Volver </button>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
+
+      <!-- Modal1 -->
+      <div class="modal fade modalstyle text-dark" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Confirmacion</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <p>Al cancelar se eliminar el prestamo, ¿Estas seguro que quieres cancelar?</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn" data-bs-dismiss="modal" (click)="cancelar()">Cancelar</button>
+              <button type="button" class="btn" data-bs-dismiss="modal">Volver </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Footer -->
+      <div class="row mt-1">
+        <div class="line">
+          <hr class="border border-1 opacity-100">
+        </div>
+        <p class="text-end text-light fst-italic fw-semibold footer">Copyright © 2024, All rights reserved.</p>
+      </div>
+</div>
+
   
   
