--- a/app/src/app/ingresar-detalles-de-prestamos-v2/ingresar-detalles-de-prestamos-v2.component.scss
+++ b/app/src/app/ingresar-detalles-de-prestamos-v2/ingresar-detalles-de-prestamos-v2.component.scss
@@ -79,6 +79,7 @@
 }
 
 .btn2 {
+    
     background: linear-gradient(90deg, #FFD97D, #99824B); /* Degradado ajustado */
     color: black; /* Texto en blanco */
     padding: 10px 20px; /* Espaciado interno*/
@@ -114,7 +115,7 @@
 }
 
 .w80p{
-    width: 80%!important;
+    width: 100%!important;
 }
 
 .custom-button-b{
@@ -131,42 +132,13 @@
     background: linear-gradient(180deg,#00203D  0%,#0056A3  80%);
 }
 
-.detailCron{
-    width: 100%;
-    background: linear-gradient(270deg, #6CC1EB 0%, #3D6D85 100%);
-}
 
-.butons:hover{
-    background-color: orange;
-    color: white;
-}
-
-.cerrarbtn{
-    margin-top: 450px;
-}
-
-.cerrarbtn:hover{
-    background-color: orange;
-    color: white;
-}
-
-.card{
-    background: linear-gradient(270deg, #6CC1EB 0%, #3D6D85 100%);
-}
-
-.nav{
-    min-height: 90vh;
-}
 
 /*btn*/
 .btn-mes {
-    background-image: linear-gradient(90deg, #F28907 0%, #8C4F04 100%);
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    border-radius: 25px;
+    background: linear-gradient(90deg, #F28907 0%, #8C4F04 100%);
     font-size: 16px;
-    cursor: pointer;
+    // cursor: pointer;
     transition: background 0.3s ease;
 
     width: 200px;
@@ -245,3 +217,9 @@
     
 }
 
+/* GINN */
+
+.buttons{
+    background: linear-gradient(90deg, #F28907 0%, #8C4F04 100%);
+    
+}
