--- a/app/src/app/piepagina/piepagina.component.html
+++ b/app/src/app/piepagina/piepagina.component.html
@@ -1,24 +1,8 @@
-<footer class="container footer-container">
-  <div class="row align-items-center">
+<div class="row footer-container">
+  <div class="line ">
+    <hr class="border border-1 opacity-100">
+  </div>
+<p class="text-end text-light fst-italic fw-semibold footer">Copyright © 2024, All rights reserved.</p>
+</div>
 
-  <div class="col-md-5">
-  <hr class="border border-light border-1 opacity-100">
-  </div>
-    <!-- Centro: Logo -->
-    <div class="col-md-2 text-center">
-      <a class="nav-link" href="/inicio">
-        <img src="https://i.imgur.com/zEgZ6hH.png" alt="Logo" class="footer-logo"/>
-      </a>
-    </div>
 
-  <div class="col-md-5">
-  <hr class="border border-light border-1 opacity-100">
-  </div>
-  <!-- Copyright -->
-  <div class="row">
-    <p class="text-center text-light fst-italic fw-semibold">
-      Copyright © 2024, All rights reserved.
-    </p>
-  </div>
-  </div>
-</footer>
