--- a/app/src/app/piepagina/piepagina.component.scss
+++ b/app/src/app/piepagina/piepagina.component.scss
@@ -1,8 +1,8 @@
 .footer-container {
-  background: linear-gradient(to right, #111217 40%, #363948 65%);
-  padding: 1rem;
+  background: #002240;
   text-decoration: none;
   max-width: 100%;
+  margin: 0%;
 }
 
 .footer-logo {
