--- a/app/src/app/validar-informacion/validar-informacion.component.html
+++ b/app/src/app/validar-informacion/validar-informacion.component.html
@@ -1,108 +1,96 @@
 <!-- Flecha hacia atrás -->
 <div class="container-fluid backgroundcontainer text-light">
   
-
-<div class="container ">
-    <div class="row fw-semibold p-3 ">
-        <h2 class="text-light">Ingrese los datos</h2>
-    </div>
-
-    <div class="progress m-3 " role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-        <div class="progress-bar" style="width: 25%"></div>
-      </div>
-
-      <div class="row">
-        <div class="flechita col-md-1" (click)="volver()">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
-              <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" font-size="80" font-family="Arial" fill="#EE8600">&lt;</text>
-             </svg>
-          </div>
-          <div class="col fs-6 mt-4">
-            <h3 class="ms-3">volver</h3>
-          </div>
-      </div>  
-
-
-
-<!-- Contenido principal -->
-<div class=" container-fluid d-flex flex-column justify-content-center m-0 ">
-
-    <div class="container position-relative">
-  
-        <!-- Título -->
-        <div class="conainter ">
-            <!-- Formulario -->
-            <div class="row">
-                <div class="col-md  form-container">
-                  <form #myForm="ngForm" (ngSubmit)="continue()" novalidate>
-                     <!-- Campo Tipo Documento -->
-                     <div class="row offset-md-3 align-items-center">
-                        <div class="col-md-4">
-                            <h3 class="fs-5 mx-auto">Tipo:</h3>
-                        </div>
-                        <div class="form-check col-md-4">
-                            <input class="form-check-input" type="radio" name="tipoDocumento" id="Dni" [(ngModel)]="selectedTipo"  #tipoDocumento="ngModel" value="dni" required>
-                            <label class="form-check-label" for="Dni">
-                              Dni
-                            </label>
-                          </div>
-                          <div class="form-check col-md-4">
-                            <input class="form-check-input" type="radio" name="tipoDocumento" id="Ruc" [(ngModel)]="selectedTipo" #tipoDocumento="ngModel" value="ruc" required>
-                            <label class="form-check-label" for="Ruc">
-                              Ruc
-                            </label>
-                          </div>
-                          <div *ngIf="tipoDocumento.invalid" class="text-danger">
-                            Selecciona un tipo de documento.
-                          </div>
-                     </div>
-                     <div *ngIf="isLoading" class="spinner-container">
-                      <div class="spinner" style="width: 3rem; height: 3rem;"></div>
-                    </div>
-                    <!-- Campo DNI con botón a la derecha -->
-                    <div class="row mb-3 mt-3 offset-md-3">
-                        <label for="dni" class="form-label fs-4">Numero de documento</label>
-                        <div class="input-group">
-                            <input type="text" id="dni" class="form-control dni-input" placeholder="Documento" maxlength="11" (keypress)="validateNumber($event)" [(ngModel)]="dni" #dniModel="ngModel" name="dni" required>
-                            <button class="btn btn-op" type="button" (click)="buscar()">Buscar</button>
-                        </div>
-                        <div *ngIf="dniModel.invalid && dniModel.touched" class="text-danger">
-                          El número de documento es obligatorio.
-                        </div>
-                    </div>
-
-                    <div class="row offset-md-3 " *ngIf="!isLoading && loading==1">
-                    <!-- Información del cliente -->
-                     <h3 class="text-center p-3 m-3">Información del solicitante</h3>
-                     <div class="col">
-                      <p>Documento: <span class="dni"></span></p>
-                      <p>Nombre o razon social: <span class="nombre"></span></p>
-                     </div>
-                     <div class="col">
-                      <p><span class="dni">{{ solicitanteData.numero }}</span></p>
-                      <p><span class="nombre">{{ solicitanteData.nombre_completo }}</span></p>
-                     </div>
-                    
-                    <!-- Botón Continuar -->
-                    <div class="row text-center my-4">
-                    </div>
-                     <button type="submit" class="btn" (click)="continue()">Continuar</button>
-                    </div>   
-                  </form>
-                </div>
-            </div>
+    <div class="container">
+        <div class="row fw-semibold p-3 ">
+            <h2 class="text-light">Ingrese los datos</h2>
         </div>
-  
-    </div> 
-    <!-- Alerta de error personalizada -->
-    <div class="custom-alert" *ngIf="showError">
-        Error: Hubo un problema al iniciar sesión.
+
+        <div class="progress m-4 mt-3" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar" style="width: 25%"></div>
+          </div>
+
+        <div class="row ">
+            <div class="flechita col-md-1" (click)="volver()">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
+                  <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" font-size="80" font-family="Arial" fill="#EE8600">&lt;</text>
+                </svg>
+              </div>
+              <div class="col fs-6 mt-4">
+                <h3 class="ms-3">volver</h3>
+              </div>
+        </div>  
+
+          <!-- Contenido principal -->
+        <div class=" container-fluid d-flex flex-column justify-content-center m-0 ">
+                        <!-- Formulario -->
+                              <form #myForm="ngForm" (ngSubmit)="continue()" novalidate>
+                                <!-- Campo Tipo Documento -->
+                                <div class="row offset-md-3 align-items-center">
+                                    <div class="col-md-4">
+                                        <h3 class="fs-5 mx-auto">Tipo:</h3>
+                                    </div>
+                                    <div class="form-check col-md-4">
+                                        <input class="form-check-input" type="radio" name="tipoDocumento" id="Dni" [(ngModel)]="selectedTipo"  #tipoDocumento="ngModel" value="dni" required>
+                                        <label class="form-check-label" for="Dni">
+                                          Dni
+                                        </label>
+                                      </div>
+                                      <div class="form-check col-md-4">
+                                        <input class="form-check-input" type="radio" name="tipoDocumento" id="Ruc" [(ngModel)]="selectedTipo" #tipoDocumento="ngModel" value="ruc" required>
+                                        <label class="form-check-label" for="Ruc">
+                                          Ruc
+                                        </label>
+                                      </div>
+                                      <div *ngIf="tipoDocumento.invalid" class="text-danger">
+                                        Selecciona un tipo de documento.
+                                      </div>
+                                </div>
+                                <div *ngIf="isLoading" class="spinner-container">
+                                  <div class="spinner" style="width: 3rem; height: 3rem;"></div>
+                                </div>
+                                <!-- Campo DNI con botón a la derecha -->
+                                <div class="row mb-3 mt-3 offset-md-3">
+                                    <label for="dni" class="form-label fs-4">Numero de documento</label>
+                                    <div class="input-group">
+                                        <input type="text" id="dni" class="form-control dni-input" placeholder="Documento" maxlength="11" (keypress)="validateNumber($event)" [(ngModel)]="dni" #dniModel="ngModel" name="dni" required>
+                                        <button class="btn btn-op" type="button" (click)="buscar()">Buscar</button>
+                                    </div>
+                                    <div *ngIf="dniModel.invalid && dniModel.touched" class="text-danger">
+                                      El número de documento es obligatorio.
+                                    </div>
+                                </div>
+
+                                <div class="row offset-md-3 " *ngIf="!isLoading && loading==1">
+                                <!-- Información del cliente -->
+                                <h3 class="text-center p-3 m-3">Información del solicitante</h3>
+                                <div class="col">
+                                  <p>Documento: <span class="dni"></span></p>
+                                  <p>Nombre o razon social: <span class="nombre"></span></p>
+                                </div>
+                                <div class="col">
+                                  <p><span class="dni">{{ solicitanteData.numero }}</span></p>
+                                  <p><span class="nombre">{{ solicitanteData.nombre_completo }}</span></p>
+                                </div>
+                                <!-- Botón Continuar -->
+                                <div class="row text-center my-4">
+                                  <button type="submit" class="btn" (click)="continue()">Continuar</button>
+                                </div>
+                                </div>   
+                              </form>       
+          <!-- Alerta de error personalizada -->
+          <div class="custom-alert" *ngIf="showError">
+                    Error: Hubo un problema al iniciar sesión.
+          </div>  
+        </div>
+
     </div>
-</div>
-  <div class="row mt-1">
-      <div class="line">
+
+    <div class="row footer-container">
+      <div class="line ">
         <hr class="border border-1 opacity-100">
       </div>
-      <p class="text-end text-light fst-italic fw-semibold footer">Copyright © 2024, All rights reserved.</p>
+    <p class="text-end text-light fst-italic fw-semibold footer">Copyright © 2024, All rights reserved.</p>
     </div>
+    
 </div>
