--- a/app/src/app/validar-informacion/validar-informacion.component.scss
+++ b/app/src/app/validar-informacion/validar-informacion.component.scss
@@ -58,9 +58,9 @@
   
 
   .dni-input {
+    color: white;
     border-radius: 25px; /* Bordes redondeados */
     padding: 10px;
-    border: none; /* Eliminar borde predeterminado */
     outline: none; /* Quitar borde azul al hacer clic */
     background-color: transparent; /* Fondo transparente */
     box-shadow: none; /* Eliminar cualquier sombra al hacer clic */
