--- a/app/src/app/cronograma-de-pagos/cronograma-de-pagos.component.scss
+++ b/app/src/app/cronograma-de-pagos/cronograma-de-pagos.component.scss
@@ -99,6 +99,8 @@ nopading{
   
   
   .flechita{
+    margin-left: 160px;
+    color: #F28907;
     cursor: pointer;
     transition: transform 0.3s ease;
 
