--- a/app/src/app/ingresar-detalle-prestamo/ingresar-detalle-prestamo.component.html
+++ b/app/src/app/ingresar-detalle-prestamo/ingresar-detalle-prestamo.component.html
@@ -13,7 +13,7 @@
 
         <!-- Título -->
         <div class="row my-4">
-            <h2 class="text-center">Ingrese los detalles del préstamo</h2>
+            <h2 class="text-center">réstamo</h2>
         </div>
 
         <!-- Formulario -->
