--- a/app/src/app/ingresar-detalles-de-prestamos-v2/ingresar-detalles-de-prestamos-v2.component.scss
+++ b/app/src/app/ingresar-detalles-de-prestamos-v2/ingresar-detalles-de-prestamos-v2.component.scss
@@ -163,6 +163,7 @@
     &::placeholder {
         color: white; /* Color blanco para el placeholder */
     }
+    border-color: #6CC1EB;
 }
 
 /*flecha*/
