--- a/app/src/app/prestamobien/prestamobien.component.html
+++ b/app/src/app/prestamobien/prestamobien.component.html
@@ -26,14 +26,26 @@
           </div>
           <div class="row">
             <div id="l1"></div>
-            <p>S/</p>
+
+            <p class="mt-3">S/. {{ultimoDetallePrestamo?.prestamo?.monto}}.00 </p>
+            
             <div id="l1"></div>
+
           </div>
           
           <div class="row d-flex justify-content-center">
             <button class="btn btn-continuar" 
                     type="submit" (click)="volver()">Volver al inicio
             </button>
+          </div>
+
+          <div class="row v100 mt-3">
+            <div class="row">
+                <p class="text-start">Para ver su cronograma en formato PDF, descargue:</p>
+            </div>
+            <div class="row download">
+                <button class="btn" (click)="downloadPdf();">Descargar PDF</button>
+            </div>
           </div>
             
             
