--- a/app/src/app/prestamobien/prestamobien.component.scss
+++ b/app/src/app/prestamobien/prestamobien.component.scss
@@ -249,3 +249,19 @@
   height: 1px;
   background: #F28907;
 }
+
+.btn {
+
+  background: linear-gradient(90deg, #6CC1EB 0%, #3D6D85 100%);
+  color: black; /* Texto en blanco */
+  padding: 5px 10px; /* Espaciado interno */
+  border-radius: 20px; /* Bordes redondeados */
+  font-size: 1.0rem; /* Tamaño del texto */
+  font-weight: bold; /* Texto en negrita */
+  transition: background 0.3s ease; /* Transición suave al pasar el mouse */
+  margin-top: 15px!important;
+}
+
+.btn:hover {
+  background: linear-gradient(90deg, #3D6D85 0%, #6CC1EB 100%);
+}
