feat:Arreglando el error de al campo buscar documento

--- a/app/src/app/validar-informacion/validar-informacion.component.html
+++ b/app/src/app/validar-informacion/validar-informacion.component.html
@@ -50,7 +50,7 @@
                                   <div class="spinner" style="width: 3rem; height: 3rem;"></div>
                                 </div>
                                 <!-- Campo DNI con botón a la derecha -->
-                                <div class="row mb-3 mt-3 offset-md-3">
+                                <div class="row mb-3 mt-3 offset-md-3"  *ngIf="!isLoading">
                                     <label for="dni" class="form-label fs-4">Numero de documento</label>
                                     <div class="input-group">
 
