--- a/app/src/app/prestamobien/prestamobien.component.html
+++ b/app/src/app/prestamobien/prestamobien.component.html
@@ -16,7 +16,7 @@
       </div>
 
       <div class="row d-flex justify-content-center flex-column align-content-center">
-        <div class="col-md-6 text-center">
+        <div class="col-md-6 text-center fs-3">
           <p>Prestamo exitoso</p>
           <div class="row mt-5 mb-5 fs-1">
             <i class="fa-regular fa-circle-check fa-2xl" style="color: #FFD43B;"></i>
@@ -27,7 +27,7 @@
           <div class="row">
             <div id="l1"></div>
 
-            <p class="mt-3">S/. {{ultimoDetallePrestamo?.prestamo?.monto}}.00 </p>
+            <p class="mt-3 text-warning">S/. {{ultimoDetallePrestamo?.prestamo?.monto}}.00 </p>
             
             <div id="l1"></div>
 
@@ -41,7 +41,7 @@
 
           <div class="row v100 mt-3">
             <div class="row">
-                <p class="text-start">Para ver su cronograma en formato PDF, descargue:</p>
+                <p class="text-start fs-5">Para ver su cronograma en formato PDF, descargue:</p>
             </div>
             <div class="row download">
                 <button class="btn" (click)="downloadPdf();">Descargar PDF</button>
